# axum-api

./: .gitignore  Cargo.toml  README.md
resources/: init_database.cql
src/: api.rs  database.rs  lib.rs  main.rs  root.rs  server_state.rs  token.rs
tests/: login.rs  register.rs
tests/common/: mod.rs
