[package]
name = "axum-api"
version = "0.0.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.17", features = ["headers", "tracing"] }
jsonwebtoken = "8.3.0"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
