[package]
name = "axum-api"
version = "0.0.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
axum = { version = "0.6.17", features = ["headers", "tracing"] }
base64 = "0.21.0"
bcrypt = "0.14.0"
clap = { version = "4.2.7", features = ["derive"] }
jsonwebtoken = "8.3.0"
scylla = "0.8.1"
serde = "1.0.160"
serde_json = "1.0.96"
tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }

[dev-dependencies]
reqwest = { version = "0.11.17", features = ["json"] }
serial_test = "2.0.0"
